<resources>
    <string name="app_name">calc</string>
    <string name="result">Result Display</string>
    <string name="digit_zero">0</string>

    <!-- Clear and Equal buttons -->
    <string name="clear_symbol">CLR</string>
    <string name="equal_symbol">=</string>

    <!-- Digits -->
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>

    <!-- Operators -->
    <string name="add_symbol">+</string>
    <string name="subtract_symbol">-</string>
    <string name="multiply_symbol">*</string>
    <string name="divide_symbol">/</string>
    <string name="dot_symbol">.</string>
</resources>