<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/background"
        android:contentDescription="@string/result"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/digit_zero"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/clear_symbol"
            android:onClick="onClearClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/equal_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/equal_symbol"
            android:onClick="onEqualClick"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--
        Setting layout_width to wrap_content can resolve the LinearLayout accessibility issue.
        However, the desired look cannot be maintained if it is applied to all the rows.
        Setting layout_width to match_parent can also resolve the above issue.
        However, this will cause the "button is too wide" issue.
    -->
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_seven"
            android:onClick="onDigitClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_eight"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/nine_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_nine"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/divide_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/divide_symbol"
            android:onClick="onOperatorClick"

            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/four_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_four"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/five_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_five"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/six_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_six"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/multiply_symbol"
            android:onClick="onOperatorClick"

            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/one_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_one"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/two_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_two"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/three_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_three"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/subtract_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/subtract_symbol"
            android:onClick="onOperatorClick"

            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/zero_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/digit_zero"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dot_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/dot_symbol"
            android:onClick="onDigitClick"

            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/add_symbol"
            android:onClick="onOperatorClick"

            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>